@@ -1,0 +1,52 @@
+{
+    "name": "Fruit Trees",
+    "icon": "fruittrees:cherry_sapling",
+    "category": "patchouli:farming",
+    "sortnum": 30,
+    "pages": [
+        {
+            "type": "patchouli:spotlight",
+            "item": "fruittrees:cherry",
+            "title": "Fruit Trees",
+            "text": "Several varieties of $(item)Fruit Trees/$ will generate rarely in the world, producing $(item)Fruit/$, as the name implies. However, not all varieties can be found naturally, and instead must be $(bold)$(l:farming/fruit_trees#hybrid)Hybridized/$ using $(thing)Bees/$, which is discussed later in this chapter."
+        },
+        {
+            "type": "patchouli:text",
+            "text": "Leaves on the tree will over time begin to flower, then bear fruit. This fruit can either be harvested manually by $(bold)Right Clicking/$, or it will drop to the ground after some time.$(br2)After some time, however, once around $(bold)80/$ $(item)Fruit/$ have dropped from the tree, the tree will stop bearing fruit, at which point new trees will need to be grown."
+        },
+        {
+            "type": "patchouli:text",
+            "title": "Natural Generation",
+            "text": "The following $(thing)Trees/$ are available through natural generation:$(li)Cherry/$$(li)Apple Oak/$$(li)Lime/$$(li)Mandarin/$$(li)Citron/$$(br2)The specifics of each is detailed on further pages."
+        },
+        {
+            "type": "patchouli:spotlight",
+            "item": "fruittrees:cherry_sapling",
+            "title": "Cherry Trees",
+            "text": "$(item)Cherry Trees/$ may generate rarely in $(thing)Warm Forests/$, or very rarely in $(thing)Plains/$."
+        },
+        {
+            "type": "patchouli:spotlight",
+            "item": "fruittrees:apple_oak_sapling",
+            "title": "Apple Oak Trees",
+            "text": "$(thing)Apple Oak Trees/$ only generate in $(thing)Plains Villages/$. Additionally, a $(thing)Villager Child/$ may give you an $(item)Apple Oak Sapling/$ as a gift while you have $(thing)Hero of the Village/$."
+        },
+        {
+            "type": "patchouli:spotlight",
+            "item": "fruittrees:citron_sapling",
+            "title": "Citrus Trees",
+            "text": "$(item)Citrus Trees/$ may generate commonly in $(thing)Jungles/$, rarely in $(thing)Warm Forests/$, or very rarely in $(thing)Plains/$.$(br2)Note that only $(item)Lime/$, $(item)Citron/$, and $(item)Mandarin Trees/$ will generate naturally."
+        },
+        {
+            "type": "patchouli:spotlight",
+            "item": "fruittrees:grapefruit_sapling",
+            "title": "Hybridization",
+            "anchor": "hybrid",
+            "text": "When bees polinate multiple different varieties of $(item)Fruit Trees/$, if they are compatible, there is a chance that one of the polinated $(item)Leaves/$ will $(thing)Hybridize/$ into another variety of fruit tree.$(br2)$(item)Citrus Trees/$ may $(thing)Hybridize/$ amongst themselves, and $(item)Cherry/$ and $(item)Apple Oak Trees/$ with each other."
+        },
+        {
+            "type": "patchouli:text",
+            "text": "$(bold)$(l:getting_started/ponder)Ponder/$ any $(item)Fruit Tree Sapling/$ for more information. Also search $(bold)'Hybrids'/$ in $(jei) for specific hybridization recipes."
+        }
+    ]
+}
